labs/namespaces/specs/ckad/limitrange-examples.yaml
# Namespace with LimitRange
apiVersion: v1
kind: Namespace
metadata:
  name: limitrange-demo
